@@ -242,45 +242,6 @@ class Sanitizer {
 	 * removes HTML comments; BEWARE there may be unmatched HTML
 	 * tags in the result.
 	 *
-	 * @note Callers are recommended to use `::removeSomeTags()`
-	 * instead of this method.  `Sanitizer::removeSomeTags()` is safer
-	 * and will always return well-formed HTML; however, it is
-	 * significantly slower (especially for short strings where setup
-	 * costs predominate).  This method, although faster, should only
-	 * be used where we know the result be cleaned up in a subsequent
-	 * tidy pass.
-	 *
-	 * @param string $text Original string; see T268353 for why untainted.
-	 * @param-taint $text none
-	 * @param callable|null $processCallback Callback to do any variable or
-	 *   parameter replacements in HTML attribute values.
-	 *   This argument should be considered @internal.
-	 * @param-taint $processCallback exec_shell
-	 * @param array|bool $args Arguments for the processing callback
-	 * @param-taint $args none
-	 * @param array $extratags For any extra tags to include
-	 * @param-taint $extratags tainted
-	 * @param array $removetags For any tags (default or extra) to exclude
-	 * @param-taint $removetags none
-	 * @return string
-	 * @return-taint escaped
-	 * @deprecated since 1.38. Use ::removeSomeTags(), which always gives
-	 * balanced/tidy HTML.
-	 */
-	public static function removeHTMLtags( string $text, ?callable $processCallback = null,
-		$args = [], array $extratags = [], array $removetags = []
-	): string {
-		wfDeprecated( __METHOD__, '1.38' );
-		return self::internalRemoveHtmlTags(
-			$text, $processCallback, $args, $extratags, $removetags
-		);
-	}
-
-	/**
-	 * Cleans up HTML, removes dangerous tags and attributes, and
-	 * removes HTML comments; BEWARE there may be unmatched HTML
-	 * tags in the result.
-	 *
 	 * @note Callers are recommended to use `::removeSomeTags()` instead
 	 * of this method.  `Sanitizer::removeSomeTags()` is safer and will
 	 * always return well-formed HTML; however, it is significantly
